# nettest

./: .gitignore  Cargo.toml  README.md  speedtest.py  speedtest.sh
server/: Cargo.toml
server/src/: main.rs  tcp.rs
src/: lib.rs  main.rs  ping.rs  quicdownload.rs  tcpdownload.rs  tcping.rs  tcpupload.rs  udping.rs
src/speedtest/: download.rs  mod.rs  ping.rs  upload.rs
tcpserver/: Cargo.toml
tcpserver/src/: main.rs
