[package]
name = 'server'
version = '0.1.0'
authors = ['12101111 <w12101111@gmail.com>']
edition = '2018'

[dependencies]
rand_xoshiro = '0.4'
anyhow = '1'
#quiche = '0.3'

[dependencies.async-std]
version = "1"
features = ["attributes"]


[dependencies.rand]
version = '0.7'
default-features = false
features = ['getrandom']

[patch.crates-io.rand]
git = 'https://github.com/rust-random/rand.git'

[patch.crates-io.rand_core]
git = 'https://github.com/rust-random/rand.git'
